...
        app:titleTextColor="@color/colorWhite"
        android:background="@color/colorPrimary" >

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/player_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/video_view"
        android:layout_width="match_parent"
...
            android:gravity="center"
            android:onClick="previousOnClick"
            android:text="@string/previous_button"
            android:textAlignment="gravity" />

        <Button
            android:id="@+id/forward_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
            android:gravity="center"
            android:onClick="nextOnClick"
...
