<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/detail_recipe_list_fragment"
        android:name="com.danielburgnerjr.bakingapp.utils.DetailRecipeListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
